# biomed-exercises

./: README.md
vcf-etl/: .coverage  .gitignore  .pdm.toml  README.md  normalize_vcf.py  normalized_out.vcf  output.vcf  pdm-python  pyproject.toml
vcf-etl/.ipynb_checkpoints/: pyproject-checkpoint.toml
vcf-etl/data/: Multi_sample_cod_ex.genome.vcf  NA12878_cod_ex.genome.vcf  NA12878_normalized.vcf  TN22-123321.vcf  full_test.vcf  full_test_normalized.vcf  minimal.vcf  normalized.vcf  result.vcf
vcf-etl/src/: __main__.py  cli.py  normalize_vcf.py
vcf-etl/src/.ipynb_checkpoints/: cli-checkpoint.py  normalize_vcf-checkpoint.py
vcf-etl/src/vcf_etl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
vcf-etl/test_from_yumosong/pdm_test/: 02.vcf_test_for_FountainLife.py  README.md  output.vcf  pyproject.toml
vcf-etl/tests/: test_normalize_vcf.py
vcf-etl/tests/.ipynb_checkpoints/: test_normalize_vcf-checkpoint.py
vcf-etl/tests/testData/: colHeaders.vcf  header.vcf  noVariant.vcf  normalData.vcf  normalDataLowQual.vcf  nullData.vcf
