[project]
name = "vcf-etl"
version = "1.0"
description = ""
authors = [
    {name = "Ryan", email = "ryan.ratcliff@lifeomic.com"},
    {name = "Tomas", email = "tkanholm@gmail.com"},
]
dependencies = [
    "pip>=23.3.1",
    "click>=8.1.7",
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/lifeomic/biomed-exercises"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest==6.2",
    "pytest-cov==2.12",
    "black==22.3.0"
]

[tool.pdm.scripts]
test = "python -m pytest --cov-report term-missing --cov=src --log-level=INFO tests/"
process = "python -m src"
lint = "black --check tests/ src/"
lint-fix = "black tests/ src/"
