[project]
name = "lifeomic code assessment"
version = ""
description = "normalize a vcf, if you see this message: HELLO! Also I wish I had a linux enviroment for this :("
authors = [
    {name = "Ryan", email = "ryan.ratcliff@lifeomic.com"},
    {name = "SSS", email = "ssstrike@asu.edu"},
]
license-expression = "MIT"
dependencies = [
    "pandas>=2.1.3",
    "logging>=0.4.9.6",
    "argparse>=1.4.0",
    "pytest>=7.4.3",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Homepage = ""

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest==6.2",
    "pytest-cov==2.12",
    "black==22.3.0"
]

[tool.pdm.scripts]
test = "python -m pytest --cov-report term-missing --cov=src --log-level=INFO tests/"
process = "python -m src"
lint = "black --check tests/ src/"
lint-fix = "black tests/ src/"
