[project]
name = "Normalize VCF"
version = ""
description = "Coding exercise for Fountain Life."
authors = [
    {name = "Ryan", email = "ryan.ratcliff@lifeomic.com"},
    {name = "Slav Kendall", email = "sviatoslav.kendall@gmail.com"}
]
license-expression = "MIT"
dependencies = [
    "pandas>=2.1.3",
]
requires-python = ">=3.9"

[project.urls]
Homepage = ""

[build-system]
requires = ["pdm-pep440"]
build-backend = "pdm.pep440.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-cov==2.12",
    "black==22.3.0"
]

[tool.pdm.scripts]
test = "python -m pytest --cov-report term-missing --cov=src --log-level=INFO tests/"
process = "python -m src"
lint = "black --check tests/ src/"
lint-fix = "black tests/ src/"
